refactor: 회원 가입 리팩토링