@@ -18,6 +18,7 @@ import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Field;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 import java.util.Objects;
 
@@ -36,10 +37,9 @@ public class AuthLoginService {
                 UriComponents uriComponents = UriComponentsBuilder
                         .fromUriString(authorizationUrl)
                         .queryParam("client_id", snsLoginDto.getId())
-                        .queryParam("redirect_uri", URLEncoder.encode(snsLoginDto.getRedirectUri(), "UTF-8"))
+                        .queryParam("redirect_uri", URLEncoder.encode(snsLoginDto.getRedirectUri(), StandardCharsets.UTF_8))
                         .queryParam("response_type", "code")
-                        .queryParam("state", URLEncoder.encode("1234", "UTF-8"))
-                        .queryParam("scope", "account_email")
+                        .queryParam("state", URLEncoder.encode("1234", StandardCharsets.UTF_8))
                         .build();
                 return uriComponents.toString();
             }
@@ -82,7 +82,6 @@ public class AuthLoginService {
                     signinResDto.setExpires_in(token.getExpires_in());
 
                     signinResDto.setMessage("정상 처리 되었습니다.");
-                    System.out.println("1234" + signinResDto);
                     return signinResDto;
                 }
             }
@@ -102,43 +101,11 @@ public class AuthLoginService {
         if (response.isSuccessful()) {
             if(response.body() != null) {
                 String body = response.body().string();
-                OauthResDto oauthResDto = new Gson().fromJson(body, OauthResDto.class);
 
-
-                return oauthResDto;
+                return new Gson().fromJson(body, OauthResDto.class);
             }
         }
         return null;
     }
 
-    public SignupReqDto getKakaoMemberProfile(SNSLoginDto snsLoginDto, String token) throws Exception {
-        OkHttpClient client = new OkHttpClient();
-
-        RequestBody requestBody = new FormBody.Builder()
-                .build();
-        Request.Builder builder = new Request.Builder()
-                .url("https://kapi.kakao.com/v2/user/me")
-                .addHeader("Content-Type", "application/x-www-form-urlencoded")
-                .addHeader("Authorization", "Bearer " + token)
-                .post(requestBody);
-
-        Request request = builder.build();
-        Response response = client.newCall(request).execute();
-        if (response.isSuccessful()) {
-            if(response.body() != null) {
-                String body = response.body().string();
-                SignupReqDto signupReqDto = mapResponseToSignupReqDto(body);
-
-                return signupReqDto;
-            }
-        }
-        return null;
-    }
-
-    private SignupReqDto mapResponseToSignupReqDto(String responseBody) {
-        Gson gson = new Gson();
-        SignupReqDto signupReqDto = gson.fromJson(responseBody, SignupReqDto.class);
-
-        return signupReqDto;
-    }
 }
